[gd_scene load_steps=22 format=3 uid="uid://bdkyxi1h2bmic"]

[ext_resource type="Script" uid="uid://dnv0jbam4d3iq" path="res://scene/game/game.gd" id="1_cirq1"]
[ext_resource type="Texture2D" uid="uid://bh8bagbydev08" path="res://asset/floor.jpg" id="2_5wlrd"]
[ext_resource type="Script" uid="uid://bytfiiavhabuo" path="res://scene/game/screen.gd" id="2_7d2hf"]
[ext_resource type="Texture2D" uid="uid://b3phlj6ketmq" path="res://asset/piece_highlight.png" id="4_8u7u6"]
[ext_resource type="Texture2D" uid="uid://b2mqmvtyaplc2" path="res://asset/screen.png" id="5_fkm2x"]
[ext_resource type="Script" uid="uid://cucat3jxbytdv" path="res://scene/game/prompt.gd" id="5_v4hye"]
[ext_resource type="Texture2D" uid="uid://dj2u771wkedyo" path="res://asset/piece.png" id="6_yv2ml"]
[ext_resource type="PackedScene" uid="uid://cepc17f0c3o82" path="res://scene/mouse_cursor/mouse_cursor.tscn" id="7_2rwqa"]
[ext_resource type="Script" uid="uid://bjbfd8ms11b7" path="res://scene/game/solver.gd" id="7_oixtr"]
[ext_resource type="Theme" uid="uid://b5qr7r8teeuqf" path="res://res/default_theme.tres" id="8_o100e"]
[ext_resource type="AudioStream" uid="uid://bg3f4fbmqhd57" path="res://asset/piece_drop_high.wav" id="9_c7fbu"]
[ext_resource type="AudioStream" uid="uid://3fg6v6v71pgo" path="res://asset/ambient.mp3" id="9_o100e"]
[ext_resource type="AudioStream" uid="uid://dfdvkru8ucu04" path="res://asset/piece_drop_high2.wav" id="10_8u7u6"]
[ext_resource type="AudioStream" uid="uid://cotj8efa03kj8" path="res://asset/piece_drop_mid.wav" id="11_v4hye"]
[ext_resource type="AudioStream" uid="uid://biqv0gx2in73i" path="res://asset/piece_drop_mid2.wav" id="12_yv2ml"]
[ext_resource type="AudioStream" uid="uid://bopdng5aihveo" path="res://asset/piece_drop_low.wav" id="13_2rwqa"]
[ext_resource type="AudioStream" uid="uid://c1arm28g06w74" path="res://asset/piece_drop_low2.wav" id="14_o100e"]
[ext_resource type="AudioStream" uid="uid://c3tro1agvj6h7" path="res://asset/grid-clear.mp3" id="16_okn60"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_v4hye"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("9_c7fbu")
stream_1/stream = ExtResource("10_8u7u6")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_c7fbu"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("11_v4hye")
stream_1/stream = ExtResource("12_yv2ml")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8u7u6"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("13_2rwqa")
stream_1/stream = ExtResource("14_o100e")

[node name="Main" type="Node2D"]
script = ExtResource("1_cirq1")

[node name="Background" type="Node2D" parent="."]
z_index = -1

[node name="Sprite2D" type="Sprite2D" parent="Background"]
scale = Vector2(0.67870367, 0.6787037)
texture = ExtResource("2_5wlrd")
centered = false

[node name="Screen" type="Node2D" parent="."]
position = Vector2(640, 380)
script = ExtResource("2_7d2hf")

[node name="Sprite2D" type="Sprite2D" parent="Screen"]
texture = ExtResource("5_fkm2x")
region_enabled = true
region_rect = Rect2(0, 100, 700, 600)

[node name="Pieces" type="Node2D" parent="Screen"]

[node name="PieceHighlightSprite2D" type="Sprite2D" parent="Screen"]
visible = false
self_modulate = Color(1, 1, 1, 0.627451)
texture = ExtResource("4_8u7u6")

[node name="Prompt" type="Node2D" parent="." node_paths=PackedStringArray("screen")]
script = ExtResource("5_v4hye")
screen = NodePath("../Screen")

[node name="TopSprite2D" type="Sprite2D" parent="Prompt"]
texture = ExtResource("6_yv2ml")

[node name="PreviewSprite2D" type="Sprite2D" parent="Prompt"]
z_index = -1
texture = ExtResource("6_yv2ml")

[node name="Solver" type="Node" parent="."]
script = ExtResource("7_oixtr")

[node name="Audio" type="Node2D" parent="."]
position = Vector2(640, 420)

[node name="Ambient" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("9_o100e")
volume_db = 15.0
autoplay = true

[node name="PieceDropHigh" type="AudioStreamPlayer2D" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_v4hye")
volume_db = -5.0
max_polyphony = 15

[node name="PieceDropMid" type="AudioStreamPlayer2D" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_c7fbu")
volume_db = -5.0
max_polyphony = 15

[node name="PieceDropLow" type="AudioStreamPlayer2D" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_8u7u6")
volume_db = -5.0
max_polyphony = 15

[node name="GridClear" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("16_okn60")
volume_db = -5.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="MouseCursor" parent="UI" instance=ExtResource("7_2rwqa")]
scale = Vector2(0.5, 0.5)

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_o100e")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="WithdrawButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Withdraw"

[node name="RestartButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Restart"

[node name="ExportButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Export"

[node name="SettingsButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
text = "Settings"

[connection signal="player_won" from="Screen" to="." method="_on_player_won"]
[connection signal="tied" from="Screen" to="." method="_on_game_tied"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/WithdrawButton" to="." method="_on_withdraw_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/ExportButton" to="." method="_on_export_button_pressed"]
